# RustAPI

./: README.md
api/: Cargo.toml
api/src/: main.rs
api/src/schema/: health.rs  mod.rs
api/src/server/: mod.rs  routes.rs
