[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#Web for our API server
warp = "0.3.2"

#Log
log = "0.4.17"
pretty_env_logger = "0.4.0"

# Async 
tokio = { version = "1.19.1", features = ["full"] }

#Serialization
serde_json = "1.0.81"

#GraphqlTool
async-graphql = "4.0.1"
async-graphql-warp = "4.0.1"